--- a/app/assets/stylesheets/font-icons.scss
+++ b/app/assets/stylesheets/font-icons.scss
@@ -13,9 +13,9 @@
 	font-family: 'lined-icons';
 	src:asset-url('lined-icons.eot');
 	src:asset-url('lined-icons.eot') format('embedded-opentype'),
-		url('lined-icons.woff') format('woff'),
-		url('lined-icons.ttf') format('truetype'),
-		url('lined-icons.svg') format('svg');
+		asset-url('lined-icons.woff') format('woff'),
+		asset-url('lined-icons.ttf') format('truetype'),
+		asset-url('lined-icons.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -24,9 +24,9 @@
 	font-family: 'Simple-Line-Icons';
 	src:asset-url('Simple-Line-Icons.eot');
 	src:asset-url('Simple-Line-Icons.eot?#iefix') format('embedded-opentype'),
-		url('Simple-Line-Icons.woff') format('woff'),
-		url('Simple-Line-Icons.ttf') format('truetype'),
-		url('Simple-Line-Icons.svg#Simple-Line-Icons') format('svg');
+		asset-url('Simple-Line-Icons.woff') format('woff'),
+		asset-url('Simple-Line-Icons.ttf') format('truetype'),
+		asset-url('Simple-Line-Icons.svg#Simple-Line-Icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
